add spacing in form section

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -168,6 +168,7 @@
 
   // form contact
   .form-contact {
+    padding-left: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
